MDEV-6701: InnoDB tests fail in 10.1

Fixed test failures seen on defragment tests, innodb.innodb-wl5522-debug-zip
and innodb.innodb_bug12902967.